force-app/main/default/objects/SFDC_MDF_Claim__c/SFDC_MDF_Claim__c.object-meta.xml
<CustomObject>
    <description>A set of claims tied to a specific grant request.</description>
    <label>Grant Claim</label>
    <nameField>
        <label>Claim Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grant Claims</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>