force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The partner account that made the claim request. Typically updated via a scontrol or APEX code rather than having the partner select their own account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>R00N30000002DjDKEA0</relationshipName>
    <type>Lookup</type>
</CustomField>