force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Budget_Program_area__c.field-meta.xml
<CustomField>
    <fullName>Budget_Program_area__c</fullName>
    <formula>Text(Budget__r.Program_Area__c)</formula>
    <label>Program Area</label>
    <type>Text</type>
</CustomField>