force-app/main/default/objects/SFDC_MDF_Claim__c/fields/CC_Order__c.field-meta.xml
<CustomField>
    <fullName>CC_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Financial Transaction to apply to customer account</description>
    <label>Credit Memo</label>
    <referenceTo>ccrz__E_Order__c</referenceTo>
    <relationshipLabel>Grant Claims</relationshipLabel>
    <relationshipName>Grant_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>