force-app/main/default/objects/SFDC_MDF_Claim__c/fields/CC_Stored_Payment__c.field-meta.xml
<CustomField>
    <fullName>CC_Stored_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stored Payment for use during Order Entry</description>
    <label>CC Stored Payment</label>
    <referenceTo>ccrz__E_StoredPayment__c</referenceTo>
    <relationshipLabel>Grant Claims</relationshipLabel>
    <relationshipName>Grant_Claims</relationshipName>
    <type>Lookup</type>
</CustomField>