force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Claim_Details__c.field-meta.xml
<CustomField>
    <fullName>Claim_Details__c</fullName>
    <description>High level information about the fund claim</description>
    <label>Claim Details</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>