force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Claim_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Claim_Paid_Date__c</fullName>
    <description>Claim paid date</description>
    <label>Claim Paid Date</label>
    <type>Date</type>
</CustomField>