force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <formula>CC_Order__r.ccrz__CCSubscription__r.ccrz__CCOrderItem__r.ILT_Class__r.Learning_Plan__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Name</label>
    <type>Text</type>
</CustomField>