force-app/main/default/objects/SFDC_MDF_Claim__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <formula>CC_Order__r.ccrz__CCSubscription__r.ccrz__CCOrderItem__r.ILT_Class__r.redwing__End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Date</label>
    <type>Date</type>
</CustomField>