force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Expenditure_Type__c.field-meta.xml
<CustomField>
    <fullName>Expenditure_Type__c</fullName>
    <description>A list of available activity/ expenditure types. Customize as needed</description>
    <label>Expenditure Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Course Fees</fullName>
            </value>
            <value>
                <fullName>Books and Expenses</fullName>
            </value>
            <value>
                <fullName>Travel Reimbursement</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>