force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Location_Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Location_Mailing_City__c</fullName>
    <formula>CC_Order__r.ccrz__CCSubscription__r.ccrz__CCOrderItem__r.ILT_Class__r.Location_Mailing_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Mailing City</label>
    <type>Text</type>
</CustomField>