force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Location_zip_code__c.field-meta.xml
<CustomField>
    <fullName>Location_zip_code__c</fullName>
    <formula>CC_Order__r.ccrz__CCSubscription__r.ccrz__CCOrderItem__r.ILT_Class__r.Site_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location zip code</label>
    <type>Text</type>
</CustomField>