force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Paid_Check_Number__c.field-meta.xml
<CustomField>
    <fullName>Paid_Check_Number__c</fullName>
    <description>Check number used to pay claim.</description>
    <label>Paid Check Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>