force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Partner_Owner__c.field-meta.xml
<CustomField>
    <fullName>Partner_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user that owns the partner account. Should be updated/ set automatically by an APEX trigger or scontrol rather than entered by the user</description>
    <label>Partner Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N30000002DjDeEAK</relationshipName>
    <type>Lookup</type>
</CustomField>