force-app/main/default/objects/SFDC_MDF_Claim__c/fields/Performance_Attached__c.field-meta.xml
<CustomField>
    <fullName>Performance_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked by the partner or the vendor (depending on the field level security and implementation specifics) to indicate that the claim has supporting documentation</description>
    <label>Performance Attached</label>
    <type>Checkbox</type>
</CustomField>