force-app/main/default/objects/SFDC_MDF_Claim__c/validationRules/Amount_Limits.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Limits</fullName>
    <active>true</active>
    <description>The amount must be greater than zero</description>
    <errorConditionFormula>AND(
   Amount__c &lt;= 0,
   NOT 
     (ISPICKVAL( Payment_Method__c , &quot;Revoke&quot;)
      ),
      NOT (ISPICKVAL(  Status__c  , &quot;Paid&quot;)
      )
    )</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>The claim amount must be greater than zero</errorMessage>
</ValidationRule>