force-app/main/default/objects/SFDC_MDF_Claim__c/validationRules/Require_Other_Expenditure_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Other_Expenditure_Type</fullName>
    <active>true</active>
    <description>Used to force the user to choose fill in the &#39;other expenditure type&#39; when &#39;other&#39; is chosen as the expenditure type</description>
    <errorConditionFormula>AND(ISPICKVAL( Expenditure_Type__c, &quot;Other&quot;), LEN(Other_Expenditure_Type__c )=0)</errorConditionFormula>
    <errorDisplayField>Other_Expenditure_Type__c</errorDisplayField>
    <errorMessage>Please provide details on the &#39;Other&#39; expenditure type.</errorMessage>
</ValidationRule>